--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-23 [推特上的中国：驻美大使谢锋哈佛校园宣传北京治理模式遭批评](/articles/voa/1016200.md)
+
+4-23 [美国务院公布年度人权报告，列出全球人权面对的紧迫挑战](/articles/voa/1016201.md)
+
+4-23 [欧洲因儿童风险可能停止TikTok新的奖励应用](/articles/voa/1016202.md)
+
 4-23 [异议人士掀“跳机”浪潮 中国人再次能走就走](/articles/voa/1016203.md)
 
 4-23 [台湾发生一系列地震，最强为里氏6.3级](/articles/voa/1016204.md)
@@ -594,10 +600,4 @@
 4-11 [香港基本法23条国安立法后头一遭：无国界记者代表首次被拒绝入境](/articles/voa/1016498.md)
 
 4-11 [美国海岸警卫队：应太平洋岛国要求登上中国捕鱼船检查是“合法的”](/articles/voa/1016499.md)
-
-4-10 [香港九龙一老旧高层商住大厦发生严重火灾，五人亡四十多人受伤](/articles/voa/1016500.md)
-
-4-10 [卓荣泰将任台行政院长 注重朝野沟通 维系盟友信任](/articles/voa/1016501.md)
-
-4-10 [沙利文：美澳日菲将在南中国海进行更多联合巡逻](/articles/voa/1016502.md)
 
