--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-23 [三名德国公民涉嫌为中国安全部门收集敏感数据被捕](/articles/nyt/1042836.md)
+
 4-23 [台湾接连发生余震，最强震级6.3级](/articles/nyt/1042837.md)
 
 4-23 [中国经济放缓，拼多多实现“逆袭”](/articles/nyt/1042838.md)
@@ -598,6 +600,4 @@
 1-14 [赖清德赢得台湾大选，北京威吓性“战争”警告无效](/articles/nyt/1043134.md)
 
 1-14 [中国未能左右台湾大选，接下来会发生什么](/articles/nyt/1043135.md)
-
-1-14 [简讯：赖清德赢得台湾大选，民进党继续执政](/articles/nyt/1043136.md)
 
