--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+4-23 [拜登政府官员呼吁对中国游泳禁药事件展开独立调查](/articles/nyt/1042834.md)
+
+4-23 [这场正被全世界忽视的缅甸内战为何事关重大](/articles/nyt/1042835.md)
+
 4-23 [三名德国公民涉嫌为中国安全部门收集敏感数据被捕](/articles/nyt/1042836.md)
 
 4-23 [台湾接连发生余震，最强震级6.3级](/articles/nyt/1042837.md)
@@ -596,8 +600,4 @@
 1-15 [大选结束了，台湾的未来仍没有定数](/articles/nyt/1043132.md)
 
 1-15 [台湾新总统赖清德：草根出身，面临两岸关系考验](/articles/nyt/1043133.md)
-
-1-14 [赖清德赢得台湾大选，北京威吓性“战争”警告无效](/articles/nyt/1043134.md)
-
-1-14 [中国未能左右台湾大选，接下来会发生什么](/articles/nyt/1043135.md)
 
