--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-24 [英国宣布6亿2千万美元对乌克兰新军援，计划增加自身国防预算](/articles/voa/1016173.md)
+
+4-24 [台湾当选总统赖清德会晤美国议员，称赞美国军援法案“吓阻威权势力扩张”](/articles/voa/1016174.md)
+
 4-24 [深圳发布暴雨红色预警，全市进入紧急防御状态](/articles/voa/1016175.md)
 
 4-23 [布林肯访华前夕 美众议员呼吁向北京施压人权议题](/articles/voa/1016176.md)
@@ -596,8 +600,4 @@
 4-11 [中澳关系解冻的又一迹象 中国总理李强6月访问堪培拉](/articles/voa/1016471.md)
 
 4-11 [美日菲首次三方峰会 专家:将对中国产生重大威慑效果](/articles/voa/1016472.md)
-
-4-11 [岸田文雄向国会参众两院联席会议发表演说，美日同盟关系开启新纪元](/articles/voa/1016473.md)
-
-4-11 [通缩幽灵挥之不去，中国3月份CPI和PPI指数仍呈收缩之势](/articles/voa/1016474.md)
 
