--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+4-24 [南海局势紧张之际　印度向菲律宾提供超音速导弹](/articles/rfa/1037242.md)
+
+4-24 [美中印太竞争升级　东盟国家避免选边](/articles/rfa/1037243.md)
+
+4-24 [习近平提出"大食物观"　暗示粮食危机？](/articles/rfa/1037244.md)
+
 4-24 [中国经济放缓后遗症？ 香港去年两百名银行家丢工作](/articles/rfa/1037245.md)
 
 4-24 [美国商会报告：中国泛化国安宣传拖累商业](/articles/rfa/1037246.md)
@@ -594,10 +600,4 @@
 3-21 [朝鲜在中国实施的强迫劳动计划：虐待、性侵、工资被政府拿走](/articles/rfa/1037540.md)
 
 3-21 [甘肃天水麻辣烫走红的背后逻辑](/articles/rfa/1037541.md)
-
-3-21 [普京顺利五连任　美国国会忧心中俄联盟扩大](/articles/rfa/1037542.md)
-
-3-21 [美众议员敦促通过立法　制止中国强制摘取器官暴行](/articles/rfa/1037543.md)
-
-3-21 [“一切正常摔成渣” 中国民航局公布东航5735失事调查进展](/articles/rfa/1037544.md)
 
