--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-24 [欧盟突击搜查一家中国安全设备公司，涉海外补贴问题](/articles/voa/1016168.md)
+
+4-24 [美参院两党以压倒多数为最后通过援助乌克兰以色列和台湾的法案扫清障碍](/articles/voa/1016169.md)
+
+4-24 [TikTok大玩美国政治牌，恐仍难免在美国被剥离或是被禁用的命运](/articles/voa/1016170.md)
+
 4-24 [TikTok大玩美国政治牌，恐仍难免在美国被剥离或是被禁用的命运](/articles/voa/1016171.md)
 
 4-24 [抗议风潮不断，哥伦比亚大学取消课堂教学，校园气氛紧张](/articles/voa/1016172.md)
@@ -594,10 +600,4 @@
 4-12 [中国维和部队撤离刚果民主共和国 没留下多少好印象](/articles/voa/1016466.md)
 
 4-12 [无国界记者代表欲旁听黎智英案遭拒入境 类似情况恐层出不穷](/articles/voa/1016467.md)
-
-4-12 [拜登将在美日菲峰会上警告北京在南中国海的举动](/articles/voa/1016468.md)
-
-4-12 [北京宣布制裁两家参与对台军售的美国国防企业](/articles/voa/1016469.md)
-
-4-11 [路透调查：中国首季GDP成长仅为4.6%，3月出口再现萎缩](/articles/voa/1016470.md)
 
