--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-24 [继众院之后，美参院通过援助乌克兰以色列台湾法案，并含可能封禁TikTok条款](/articles/voa/1016157.md)
+
+4-24 [朝鲜官员罕见地公开访问伊朗](/articles/voa/1016158.md)
+
 4-24 [美官员：一旦援助法案通过，美国计划立即向乌克兰提供10亿美元军援](/articles/voa/1016159.md)
 
 4-24 [全球领导力调查：德国第一，美国其次，俄罗斯垫底，中国在非洲认可率居首](/articles/voa/1016160.md)
@@ -596,8 +600,4 @@
 4-12 [拜登和菲律宾总统宣布基础设施项目合作以对抗中国“一带一路”](/articles/voa/1016455.md)
 
 4-12 [美国会两党议员对日相岸田文雄演说大力赞扬](/articles/voa/1016456.md)
-
-4-12 [美日菲联合声明对中国在南中国海“危险和破坏稳定”的行为表示“严重关切”](/articles/voa/1016457.md)
-
-4-12 [美两党参众议员提案纪念《台湾关系法》签署45周年](/articles/voa/1016458.md)
 
