--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-24 [特朗普在纽约会见日本前首相麻生太郎](/articles/voa/1016153.md)
+
 4-24 [所罗门群岛选后谁将组建政府仍是未知数 现任总理：会负责安全工作](/articles/voa/1016154.md)
 
 4-24 [美国会通过援外法案 拜登将签署、中国反对美国援台](/articles/voa/1016155.md)
@@ -598,6 +600,4 @@
 4-12 [德国总理朔尔茨二次访华，是要向“中国龙”低头吗？](/articles/voa/1016451.md)
 
 4-12 [美日菲三边峰会达成的安全和经济措施，不少与中国相关](/articles/voa/1016452.md)
-
-4-12 [吉尔吉斯斯坦官员对中吉乌铁路项目持乐观态度](/articles/voa/1016453.md)
 
