--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+4-24 [布林肯飞抵上海 开始三天访华行程](/articles/dw/1025795.md)
+
+4-24 [中国安全设备企业欧洲两家子公司被欧盟突袭检查](/articles/dw/1025796.md)
+
+4-24 [欧盟调查中国医疗设备公共采购 担忧优先本国企业](/articles/dw/1025797.md)
+
 4-24 [亲巴勒斯坦抗议活动在美国大学蔓延](/articles/dw/1025798.md)
 
 4-24 [美參院通過援烏以台法案  80億美元助印太抗中](/articles/dw/1025799.md)
@@ -594,10 +600,4 @@
 3-29 [解放军演习靶场疑仿台北总统府附近街区](/articles/dw/1026093.md)
 
 3-29 [《奥本海默》终于在日本上映](/articles/dw/1026094.md)
-
-3-29 [《奥本海默》在日本上映 广岛观众怎么评？](/articles/dw/1026095.md)
-
-3-29 [港媒：中国新任“互联网沙皇”蔡奇已上任](/articles/dw/1026096.md)
-
-3-29 [白宫发言人：俄官员是“肥料推销员”](/articles/dw/1026097.md)
 
