--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+4-24 [金融贪腐案连连 中国银行原行长认罪](/articles/dw/1025792.md)
+
+4-24 [欧洲议会通过《供应链法》](/articles/dw/1025793.md)
+
 4-24 [4名参访希特勒故居的德国人被警方逮捕](/articles/dw/1025794.md)
 
 4-24 [布林肯飞抵上海 开始三天访华行程](/articles/dw/1025795.md)
@@ -596,8 +600,4 @@
 3-29 [俄罗斯一票否决 对朝制裁面临转折？](/articles/dw/1026090.md)
 
 3-29 [德语媒体:对华策略 对前苏联的缓和政策是上选](/articles/dw/1026091.md)
-
-3-29 [三任总统联袂登台 拜登募得数千万竞选资金](/articles/dw/1026092.md)
-
-3-29 [解放军演习靶场疑仿台北总统府附近街区](/articles/dw/1026093.md)
 
