--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-24 [美国检察官要求对币安创办人赵长鹏判处36个月监禁](/articles/voa/1016146.md)
+
+4-24 [蔡英文赖清德对美国会通过包括对台军援在内的外援法案表示高兴](/articles/voa/1016147.md)
+
 4-24 [世界媒体看中国 - 统计的法律与儿戏](/articles/voa/1016148.md)
 
 4-24 [中共启动新一轮金融巡视 分析：只会让金融界更加黑暗腐败](/articles/voa/1016149.md)
@@ -596,8 +600,4 @@
 4-12 [北京分别约见日菲驻华使节，对两国领导人涉华“消极言论”表达不满](/articles/voa/1016444.md)
 
 4-12 [拜登会晤岸田和小马科斯之时，美日航母与日韩海军在东中国海举行联合演习](/articles/voa/1016445.md)
-
-4-12 [俄罗斯加紧攻击乌克兰民用和基础设施](/articles/voa/1016446.md)
-
-4-12 [澳英美拟邀日本加盟 谁是下一个？](/articles/voa/1016447.md)
 
