--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-25 [关于美国对外援助法案，你应该知道的](/articles/nyt/1042826.md)
+
 4-25 [中美关系再掀波澜，布林肯访华面临考验](/articles/nyt/1042827.md)
 
 4-24 [抗议、占领和逮捕：哥伦比亚大学学生抗议风波如何升级](/articles/nyt/1042828.md)
@@ -598,6 +600,4 @@
 1-17 [朝鲜宣布放弃与韩国和平统一，改称对方为“最敌对国家”](/articles/nyt/1043124.md)
 
 1-17 [李强称中国2023年经济增长5.2%](/articles/nyt/1043125.md)
-
-1-16 [特朗普在艾奥瓦州党内初选中赢得压倒性胜利](/articles/nyt/1043126.md)
 
