--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-25 [拜登签署新的援助法案后,美国对以色列的军事援助将面临审视](/articles/voa/1016129.md)
+
 4-25 [从俄罗斯到中东到台湾到TikTok，布林肯访华议题众多，但两国分歧也明显](/articles/voa/1016130.md)
 
 4-25 [执政八年卸任倒计时，台湾人民如何评价蔡英文总统施政表现？](/articles/voa/1016131.md)
@@ -598,6 +600,4 @@
 4-13 [华为新品搭载英特尔人工智能芯片，美议员震惊和愤怒](/articles/voa/1016427.md)
 
 4-13 [中国到底如何援助了俄罗斯在乌克兰的战争？](/articles/voa/1016428.md)
-
-4-13 [特朗普建议对乌援助应以贷款形式提供，议长约翰逊站在他身边](/articles/voa/1016429.md)
 
