--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-25 [布林肯会见上海市委书记 吁美中负责任地管理两国关系](/articles/voa/1016127.md)
+
 4-25 [新工具上线，以AI技术应对供应链中的维吾尔强迫劳动问题](/articles/voa/1016128.md)
 
 4-25 [拜登签署新的援助法案后,美国对以色列的军事援助将面临审视](/articles/voa/1016129.md)
@@ -598,6 +600,4 @@
 4-13 [小马科斯:美日菲三边协议将改变南中国海的发展态势，但同时强调非针对中国](/articles/voa/1016425.md)
 
 4-13 [担心以色列伊朗冲突，澳洲航空和德国汉莎航空均决定避开伊朗领空](/articles/voa/1016426.md)
-
-4-13 [华为新品搭载英特尔人工智能芯片，美议员震惊和愤怒](/articles/voa/1016427.md)
 
