--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-25 [揭秘TikTok法案通过背后的“迅雷突击”](/articles/nyt/1042824.md)
+
 4-25 [拜登签署针对TikTok法案，接下来会发生什么](/articles/nyt/1042825.md)
 
 4-25 [关于美国对外援助法案，你应该知道的](/articles/nyt/1042826.md)
@@ -598,6 +600,4 @@
 1-17 [达沃斯论坛热点话题：美中关系、加沙战争、AI、乌克兰](/articles/nyt/1043122.md)
 
 1-17 [中国去年经济增速“破5”，但债务、通缩等问题仍为隐忧](/articles/nyt/1043123.md)
-
-1-17 [朝鲜宣布放弃与韩国和平统一，改称对方为“最敌对国家”](/articles/nyt/1043124.md)
 
