--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-26 [中国军机五分钟飞临台总统府上空？台防长：国军会监控防范](/articles/voa/1016112.md)
+
 4-26 [美提议用俄资产利息援乌广受关注，莫斯科威胁降级俄美关系](/articles/voa/1016113.md)
 
 4-26 [北京就德国接连逮捕中国间谍召见德驻华大使，大使称“耐人寻味”](/articles/voa/1016114.md)
@@ -598,6 +600,4 @@
 4-14 [《台湾关系法》45周年 萧美琴：台湾将持续强化国防 台学者：美国应转向“战略清晰”](/articles/voa/1016410.md)
 
 4-14 [伊朗攻击以色列，冲突升级，美国说“铁定”支持以色列](/articles/voa/1016411.md)
-
-4-14 [伊朗袭击以色列，拜登匆忙返回白宫](/articles/voa/1016412.md)
 
