--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+4-26 [南风窗｜保安队长，和被他性侵的老妇人](/articles/cdt/341301.md)
+
 4-26 [旧闻评论 | 内蒙农地风波：恶霸叙事正在挑战恶吏叙事](/articles/cdt/341306.md)
 
 4-26 [张3丰的世界｜哥大抗议运动到了最后关头](/articles/cdt/341307.md)
@@ -598,6 +600,4 @@
 3-24 [【敏感词库】本周事件：中国异议诗人、首都卫士勋章、香港何去何从](/articles/cdt/342419.md)
 
 3-23 [每日一语 2023.3.22](/articles/cdt/342429.md)
-
-3-23 [常识和洞见｜鼓掌声中，果粉年轻人将世界让给了华为大妈](/articles/cdt/342435.md)
 
