--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-26 [世界反兴奋剂机构任命瑞士检察官审查其对中国游泳运动员药检案的处理](/articles/voa/1016110.md)
+
+4-26 [拜登和其他17国领导人发表联合声明，要求哈马斯释放人质](/articles/voa/1016111.md)
+
 4-26 [中国军机五分钟飞临台总统府上空？台防长：国军会监控防范](/articles/voa/1016112.md)
 
 4-26 [美提议用俄资产利息援乌广受关注，莫斯科威胁降级俄美关系](/articles/voa/1016113.md)
@@ -596,8 +600,4 @@
 4-14 [联合国以及世界主要国家对伊朗攻击以色列的反应](/articles/voa/1016408.md)
 
 4-14 [拜登总统发表声明强烈谴责伊朗袭击以色列，并重申对以色列的“铁定”承诺](/articles/voa/1016409.md)
-
-4-14 [《台湾关系法》45周年 萧美琴：台湾将持续强化国防 台学者：美国应转向“战略清晰”](/articles/voa/1016410.md)
-
-4-14 [伊朗攻击以色列，冲突升级，美国说“铁定”支持以色列](/articles/voa/1016411.md)
 
