--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-26 [布林肯访华之际，中美关系面临哪些挑战](/articles/nyt/1042822.md)
+
 4-25 [亚洲正在上演的一场危险游戏](/articles/nyt/1042823.md)
 
 4-25 [揭秘TikTok法案通过背后的“迅雷突击”](/articles/nyt/1042824.md)
@@ -598,6 +600,4 @@
 1-17 [特朗普回来了？他其实从未离开](/articles/nyt/1043120.md)
 
 1-17 [“催生”无效，中国2023年出生人口继续减少](/articles/nyt/1043121.md)
-
-1-17 [达沃斯论坛热点话题：美中关系、加沙战争、AI、乌克兰](/articles/nyt/1043122.md)
 
