--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+4-26 [律侠客｜远洋捕捞去搞点大钱如何？这年头都穷疯了](/articles/cdt/341292.md)
+
 4-26 [张3丰的世界｜我从哥大学生抗议行动中学到的](/articles/cdt/341294.md)
 
 4-26 [秦轩｜如我必须死，还我人性](/articles/cdt/341296.md)
@@ -598,6 +600,4 @@
 3-24 [【网络民议】學人Scholar｜赵鼎新致浙大领导的辞职信](/articles/cdt/342401.md)
 
 3-24 [姜汁满头｜天水麻辣烫，一种很新的政绩工程正在流行](/articles/cdt/342403.md)
-
-3-24 [导筒directube｜俄罗斯将同性恋、双性恋与跨性别者（LGBT）运动列入恐怖分子名单](/articles/cdt/342405.md)
 
