--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-26 [中国泳队禁药争议：世界反兴奋剂组织任命特别检察官调查](/articles/nyt/1042821.md)
+
 4-26 [布林肯访华之际，中美关系面临哪些挑战](/articles/nyt/1042822.md)
 
 4-25 [亚洲正在上演的一场危险游戏](/articles/nyt/1042823.md)
@@ -598,6 +600,4 @@
 1-18 [中国重新发布青年失业率，改变统计方式后数字下降](/articles/nyt/1043119.md)
 
 1-17 [特朗普回来了？他其实从未离开](/articles/nyt/1043120.md)
-
-1-17 [“催生”无效，中国2023年出生人口继续减少](/articles/nyt/1043121.md)
 
