--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-27 [美防长宣布向乌克兰提供60亿美元军援](/articles/voa/1016085.md)
+
+4-27 [巴基斯坦俾路支省暴力事件激增的背后是什么？](/articles/voa/1016086.md)
+
+4-27 [布林肯二会习近平 分析: 美中歧见难解](/articles/voa/1016087.md)
+
 4-27 [越南高层再现人事地震，国会主席王庭惠辞职获准](/articles/voa/1016088.md)
 
 4-27 [欧盟将中国在线快时尚零售商希音列入受严格安全限制的大型数字企业名单](/articles/voa/1016089.md)
@@ -594,10 +600,4 @@
 4-15 [马克龙、朔尔茨敦促以色列避免让中东局势升级](/articles/voa/1016383.md)
 
 4-15 [北京称香港要“守牢国家安全的底线”](/articles/voa/1016384.md)
-
-4-15 [中东紧张局势加剧之际，拜登将会晤伊拉克总理，美在伊拉克驻军引关注](/articles/voa/1016385.md)
-
-4-15 [小马科斯称不打算向美军开放更多的菲律宾军事基地](/articles/voa/1016386.md)
-
-4-15 [所罗门群岛关键大选在即 中国影响力成焦点](/articles/voa/1016387.md)
 
