--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-27 [美食背后的外交玄机：美国政要来中国吃什么？怎么吃？](/articles/nyt/1042816.md)
+
 4-27 [布林肯与习近平会面：中美保持接触但难掩分歧](/articles/nyt/1042817.md)
 
 4-26 [纽约州最高法院推翻韦恩斯坦性犯罪裁决，这里是五个要点](/articles/nyt/1042818.md)
@@ -598,6 +600,4 @@
 1-18 [朝鲜真的要发动战争了吗](/articles/nyt/1043114.md)
 
 1-18 [学习一门新语言可以预防失智症吗](/articles/nyt/1043115.md)
-
-1-18 [对中国经济前景悲观，香港股市持续下跌](/articles/nyt/1043116.md)
 
