--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-27 [哈马斯和法塔赫在北京举行会谈](/articles/voa/1016074.md)
+
 4-27 [被指控涉嫌为中国从事间谍活动的两名英国人于伦敦出庭后获保释](/articles/voa/1016075.md)
 
 4-27 [国事光析：胡赵遗产与当今思考](/articles/voa/1016076.md)
@@ -598,6 +600,4 @@
 4-16 [加沙人道援助增加，但美国希望能持续](/articles/voa/1016372.md)
 
 4-16 [最新报告：中共镇压“新黑五类”，残酷“株连”家人](/articles/voa/1016373.md)
-
-4-16 [美中官员在北京讨论中东、南中国海和台湾议题](/articles/voa/1016374.md)
 
