--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-27 [世界媒体看中国: 中俄联盟现状](/articles/voa/1016072.md)
+
 4-27 [布林肯：美国的芯片技术管制不是为了遏阻中国经济和科技发展](/articles/voa/1016073.md)
 
 4-27 [哈马斯和法塔赫在北京举行会谈](/articles/voa/1016074.md)
@@ -598,6 +600,4 @@
 4-16 [伊朗袭击后，伊拉克人担心以色列报复](/articles/voa/1016370.md)
 
 4-16 [联调局对货轮撞毁巴尔的摩大桥事件启动刑事调查](/articles/voa/1016371.md)
-
-4-16 [加沙人道援助增加，但美国希望能持续](/articles/voa/1016372.md)
 
