--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-27 [出售或被禁，TikTok还有什么其他选择？](/articles/voa/1016068.md)
+
+4-27 [专访高伐林：评价胡锦涛执政 , 二十大为何被羞辱](/articles/voa/1016069.md)
+
 4-27 [华北雁塘：红线的碰撞-布林肯的最后通牒与中国的国家焦虑](/articles/voa/1016070.md)
 
 4-27 [菲律宾否认曾与中国就争议浅滩达成协议，称这一说法是宣传技俩](/articles/voa/1016071.md)
@@ -596,8 +600,4 @@
 4-16 [拜登政府资助三星电子公司在美国建芯片制造和研究中心](/articles/voa/1016366.md)
 
 4-16 [中国—中东欧国家合作难以为继](/articles/voa/1016367.md)
-
-4-16 [英国最新香港报告指政治反对声音几乎全被消除 向在英港人社群保证安全](/articles/voa/1016368.md)
-
-4-16 [半马变“伴马” 中国选手疑似在半程马拉松中被“保送冠军”](/articles/voa/1016369.md)
 
