--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-28 [布林肯将访问中东，讨论加沙和地区安全](/articles/voa/1016062.md)
+
 4-28 [中国一季度工业利润增速引发对经济复苏的质疑](/articles/voa/1016063.md)
 
 4-28 [习近平组建信息支援部队调整军种格局的战略算计与意图](/articles/voa/1016064.md)
@@ -598,6 +600,4 @@
 4-16 [北京国际赛事被指放水让中国选手获胜 中国运动赛事腐败屡见不鲜](/articles/voa/1016360.md)
 
 4-16 [美众议院拟就外援案进行分案投票 包括援助以色列、乌克兰和台湾](/articles/voa/1016361.md)
-
-4-16 [易富贤：中国产能过剩的根源是独生子女政策](/articles/voa/1016362.md)
 
