--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-28 [发力在华推“全自动驾驶” 马斯克突访北京](/articles/dw/1025748.md)
+
 4-28 [2024世界新闻摄影奖：痛苦、哀伤与感人的瞬间](/articles/dw/1025749.md)
 
 4-28 [研究：悲观的德国年轻人正在右转](/articles/dw/1025750.md)
@@ -598,6 +600,4 @@
 4-2 [七名国际救援人员遭以军空袭丧生](/articles/dw/1026046.md)
 
 4-2 [朝鲜试射疑似超高音速中程导弹](/articles/dw/1026047.md)
-
-4-2 [若乌克兰输掉战争 1000万人将成难民？](/articles/dw/1026048.md)
 
