--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-28 [伊拉克立法将同性恋定为刑事犯罪 最高可判处15年徒刑](/articles/voa/1016057.md)
+
 4-28 [以色列军队被控在约旦河西岸侵犯人权 美国的审查“正在进行中”](/articles/voa/1016058.md)
 
 4-28 [世界反兴奋剂机构与北京回应中国泳队用药指控 知情者：中国体坛吃兴奋剂系长期国家行为](/articles/voa/1016059.md)
@@ -598,6 +600,4 @@
 4-16 [世界媒体看中国 - 德国总理访中国](/articles/voa/1016355.md)
 
 4-16 [在欧盟控诉中国产能过剩之际 习近平会朔尔茨：中德合作不是“风险”](/articles/voa/1016356.md)
-
-4-16 [王毅与伊朗外长通话 中国赞赏伊朗“克制”并重申战略伙伴关系](/articles/voa/1016357.md)
 
