--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-28 [忧影响经济复苏 德国考虑削弱审查中国投资的计划](/articles/voa/1016056.md)
+
 4-28 [伊拉克立法将同性恋定为刑事犯罪 最高可判处15年徒刑](/articles/voa/1016057.md)
 
 4-28 [以色列军队被控在约旦河西岸侵犯人权 美国的审查“正在进行中”](/articles/voa/1016058.md)
@@ -598,6 +600,4 @@
 4-16 [美国贸易代表：“认真考虑”应对中国的各种贸易工具](/articles/voa/1016354.md)
 
 4-16 [世界媒体看中国 - 德国总理访中国](/articles/voa/1016355.md)
-
-4-16 [在欧盟控诉中国产能过剩之际 习近平会朔尔茨：中德合作不是“风险”](/articles/voa/1016356.md)
 
