--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-29 [俄罗斯无人机让乌克兰黑海城市的一家酒店起火燃烧](/articles/voa/1016049.md)
+
 4-29 [习近平访法等国前夕，欧洲多国冒出中国间谍案被称“冰山一角”](/articles/voa/1016050.md)
 
 4-28 [李强在北京会晤马斯克，称特斯拉是“中美经贸合作成功典型”](/articles/voa/1016051.md)
@@ -598,6 +600,4 @@
 4-17 [电动车价格战重创特斯拉，10%的中国销售团队成员失去饭碗](/articles/voa/1016347.md)
 
 4-17 [朔尔茨二访中国 分析:德中寻求合作不代表去风险转向，中国无法分化美欧](/articles/voa/1016348.md)
-
-4-16 [美中两国防长进行2022年来的首次通话](/articles/voa/1016349.md)
 
