--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-29 [拜登和内塔尼亚胡讨论以哈战争，没有停火迹象](/articles/voa/1016046.md)
+
+4-29 [乌克兰军队撤退，俄罗斯军队前进，基辅等待武器到达](/articles/voa/1016047.md)
+
 4-29 [法国外长在黎巴嫩调停真主党和以色列之间的冲突](/articles/voa/1016048.md)
 
 4-29 [俄罗斯无人机让乌克兰黑海城市的一家酒店起火燃烧](/articles/voa/1016049.md)
@@ -596,8 +600,4 @@
 4-17 [八九民运35载 如何评价胡耀邦赵紫阳](/articles/voa/1016344.md)
 
 4-17 [中国首季GDP增速5.3%，但股市“千股跌停”不买单](/articles/voa/1016345.md)
-
-4-17 [确保人民免受新流行病祸害，拜登政府出台《美国全球健康安全战略》](/articles/voa/1016346.md)
-
-4-17 [电动车价格战重创特斯拉，10%的中国销售团队成员失去饭碗](/articles/voa/1016347.md)
 
