--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-29 [日本执政党在特殊选举中失去全部3个席位](/articles/voa/1016045.md)
+
 4-29 [拜登和内塔尼亚胡讨论以哈战争，没有停火迹象](/articles/voa/1016046.md)
 
 4-29 [乌克兰军队撤退，俄罗斯军队前进，基辅等待武器到达](/articles/voa/1016047.md)
@@ -598,6 +600,4 @@
 4-17 [耶伦在伊朗攻击以色列后警告对伊朗实施新制裁](/articles/voa/1016343.md)
 
 4-17 [八九民运35载 如何评价胡耀邦赵紫阳](/articles/voa/1016344.md)
-
-4-17 [中国首季GDP增速5.3%，但股市“千股跌停”不买单](/articles/voa/1016345.md)
 
