--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+4-30 [每日一语 2024.4.29](/articles/cdt/341177.md)
+
+4-30 [建设性意见｜把病毒学家逼成流浪汉，就不怕实验室里的病毒也流浪上海吗？](/articles/cdt/341178.md)
+
 4-29 [知识分子｜在中国，“学二代”现象正在蔓延？](/articles/cdt/341184.md)
 
 4-29 [剑客写字的地方｜他们证明自己爱国的方式：对“弱者”出手！](/articles/cdt/341186.md)
@@ -596,8 +600,4 @@
 3-27 [澎湃思想市场｜赵鼎新：浙大这些年，“实现的要比当初设想的多”](/articles/cdt/342298.md)
 
 3-27 [中新经纬｜潘功胜：中国正在制定《金融稳定法》](/articles/cdt/342300.md)
-
-3-27 [【网络民议】慈善机构给政府捐款？我的国家得了罕见病](/articles/cdt/342308.md)
-
-3-27 [每日一语 2024.3.26](/articles/cdt/342313.md)
 
