--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-30 [维权律师余文生夫妇即将被起诉 18岁儿子孤身一人状况堪忧](/articles/voa/1016032.md)
+
 4-30 [聿文视界：马斯克突访中国，双方各有所得](/articles/voa/1016033.md)
 
 4-30 [台当选总统赖清德听取国安简报，表态延续蔡英文维持台海和平努力](/articles/voa/1016034.md)
@@ -598,6 +600,4 @@
 4-17 [美中防长通话 中国就台湾与南中国海议题呛声 美军机随后飞越台湾海峡](/articles/voa/1016330.md)
 
 4-17 [美国、欧盟拟对伊朗实施进一步制裁](/articles/voa/1016331.md)
-
-4-17 [阿根廷右翼总统米莱的现实困境：和中国脱钩之路有多难？](/articles/voa/1016332.md)
 
