--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-30 [芬兰航空在全球定位系统干扰阻止其飞机两次降落后停止飞往爱沙尼亚的航班](/articles/voa/1016025.md)
+
+4-30 [美国运动员团体就中国游泳运动员药检事件致函美药物管控主管，呼吁独立调查](/articles/voa/1016026.md)
+
+4-30 [美众院中共问题特设委员会新主席：将继续秉持跨党派精神，“揭露中共所构成的威胁”](/articles/voa/1016027.md)
+
 4-30 [中国的习近平在贸易紧张升温时访问欧洲](/articles/voa/1016028.md)
 
 4-30 [布林肯：哈马斯应该接受以色列“极其慷慨”的休战提议](/articles/voa/1016029.md)
@@ -594,10 +600,4 @@
 4-17 [史上最大规模“肩并肩”军演在即，美菲军队将联合举行夺岛演练](/articles/voa/1016323.md)
 
 4-17 [乌克兰战争中至少有5万名俄罗斯军人死亡](/articles/voa/1016324.md)
-
-4-17 [台湾智库团体兵推报告：台湾能源金融是短板，新加坡可望调停台海冲突](/articles/voa/1016325.md)
-
-4-17 [美中经济和金融工作组举行第四次会议](/articles/voa/1016326.md)
-
-4-17 [拜登政府公布最新举措应对中国钢铁倾销等“不公平”贸易](/articles/voa/1016327.md)
 
