--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+4-30 [【404文库】21世纪经济报道｜反思问界M7事故：“夸张宣传”遭反噬，“遥遥领先”的代价不应该是生命](/articles/cdt/341171.md)
+
 4-30 [每日一语 2024.4.29](/articles/cdt/341177.md)
 
 4-30 [建设性意见｜把病毒学家逼成流浪汉，就不怕实验室里的病毒也流浪上海吗？](/articles/cdt/341178.md)
@@ -598,6 +600,4 @@
 3-28 [请以通报为准｜三体——重回新闻黄金时代](/articles/cdt/342286.md)
 
 3-28 [小小声说话｜被消失的记者们](/articles/cdt/342287.md)
-
-3-27 [特正经的张某某｜“成都毒试卷那事，你会写吗？”——“不会。”](/articles/cdt/342294.md)
 
