--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-30 [中國4月製造業成長走緩 十年目標將見真章?](/articles/dw/1025733.md)
+
 4-30 [索羅門親中總理宣布不連任 指西方長期施壓](/articles/dw/1025734.md)
 
 4-29 [中国银行忧遭美国制裁 中俄贸易改走“地下渠道”](/articles/dw/1025735.md)
@@ -598,6 +600,4 @@
 4-4 [台灣發生25年來最強地震 已9死逾千人傷](/articles/dw/1026031.md)
 
 4-3 [乌克兰加入北约 只是时间问题？](/articles/dw/1026032.md)
-
-4-3 [欧盟对两家中资光伏企业展开反补贴调查](/articles/dw/1026033.md)
 
