--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-30 [白宫：严肃对待印度情报人员直接参与在美加两起暗杀行动的报道](/articles/voa/1016010.md)
+
+4-30 [执政党补选失利 日本首相誓言推动改革、不会因此下台](/articles/voa/1016011.md)
+
 4-30 [菲律宾指责中国于争议海域骚扰并损坏菲律宾船只 中国称依法驱离](/articles/voa/1016012.md)
 
 4-30 [亲巴勒斯坦示威持续 哥伦比亚大学祭出停学处分](/articles/voa/1016013.md)
@@ -596,8 +600,4 @@
 4-18 [保护工人利益、确保公平竞争：拜登政府宣布针对中国的新贸易措施](/articles/voa/1016308.md)
 
 4-18 [乌克兰官员称切尔尼戈夫遭到致命的俄罗斯导弹袭击](/articles/voa/1016309.md)
-
-4-18 [婆媳关系必须和谐 抖音快手下架多部宣扬 “非主流家庭观”的微短剧](/articles/voa/1016310.md)
-
-4-18 [日本外务省年度报告: 中朝俄造成二战以来最严重威胁](/articles/voa/1016311.md)
 
