--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-30 [美运动员团体呼吁对中国兴奋剂事件进行独立调查](/articles/dw/1025730.md)
+
 4-30 [德国联邦国防军嫌疑人承认为俄罗斯提供情报](/articles/dw/1025731.md)
 
 4-30 [两名乌克兰伤兵在德国遇刺身亡](/articles/dw/1025732.md)
@@ -598,6 +600,4 @@
 4-4 [台灣強震後救援持續 外界評防震有成](/articles/dw/1026028.md)
 
 4-4 [AUKUS護台海？美「印太沙皇」罕表態](/articles/dw/1026029.md)
-
-4-4 [搶先拉攏印尼準總統 習近平出手未必有效](/articles/dw/1026030.md)
 
