--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-30 [马斯克突访中国 印度“很震惊”](/articles/dw/1025728.md)
+
 4-30 [国际刑事法院将对以色列总理发出逮捕令？](/articles/dw/1025729.md)
 
 4-30 [美运动员团体呼吁对中国兴奋剂事件进行独立调查](/articles/dw/1025730.md)
@@ -598,6 +600,4 @@
 4-4 [2分钟告诉你：北约是什么？](/articles/dw/1026026.md)
 
 4-4 [以军方承认“严重错误” 援救组织不买账](/articles/dw/1026027.md)
-
-4-4 [台灣強震後救援持續 外界評防震有成](/articles/dw/1026028.md)
 
