--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-30 [马斯克取消访印后突访北京令印度感到“震惊”和被“轻慢”](/articles/voa/1016006.md)
+
 4-30 [北京撮合法塔赫与哈马斯谈判，称双方有和解的“政治意愿”](/articles/voa/1016007.md)
 
 4-30 [中共七月召开二十届三中全会，称要深化改革以应对经济挑战](/articles/voa/1016008.md)
@@ -598,6 +600,4 @@
 4-18 [美宇航局长告诉议员：警惕中国在太空的军事存在](/articles/voa/1016304.md)
 
 4-18 [中国将在2027年前具备入侵台湾能力？美情报官员存疑](/articles/voa/1016305.md)
-
-4-18 [新的抖音海外版TikTok Lite应用程序引起欧盟担忧](/articles/voa/1016306.md)
 
