--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -7,7 +7,7 @@
 
 4-30 [张3丰的世界｜哥大抗议现场，一位中国人失声痛哭](/articles/cdt/341153.md)
 
-4-30 [Zlibrary Official｜再见，中国读者。](/articles/cdt/341155.md)
+4-30 [【404媒体】Zlibrary Official｜再见，中国读者。](/articles/cdt/341155.md)
 
 4-30 [【404文库】21世纪经济报道｜反思问界M7事故：“夸张宣传”遭反噬，“遥遥领先”的代价不应该是生命](/articles/cdt/341171.md)
 
