--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-1 [美勞工部：國際公司不該在新疆繼續營運](/articles/dw/1025722.md)
+
 5-1 [中國惠台出新招 是利多還是陷阱？](/articles/dw/1025723.md)
 
 5-1 [AI如何挽救一家德国公司？](/articles/dw/1025724.md)
@@ -598,6 +600,4 @@
 4-4 [布林肯：美国对乌克兰的支持坚如磐石](/articles/dw/1026020.md)
 
 4-4 [耿爽感谢国际社会关心“中国台湾地区”地震 台湾不满](/articles/dw/1026021.md)
-
-4-4 [美国对乌克兰的支持坚如磐石](/articles/dw/1026022.md)
 
