--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-1 [CECC：《防止强迫维吾尔人劳动法》实施两年多，西方企业继续在新疆参与侵犯人权](/articles/voa/1015991.md)
+
 5-1 [援乌案通过后，众院民主党领袖宣布：如共和党人试图罢免议长，民主党将出手相救](/articles/voa/1015992.md)
 
 5-1 [特朗普因违反禁言令而被判藐视法庭](/articles/voa/1015993.md)
@@ -598,6 +600,4 @@
 4-19 [荷兰军事情报机构称，中国间谍把荷兰工业作为猎捕目标](/articles/voa/1016289.md)
 
 4-18 [马尼拉驳斥北京批评，重申加强与美日关系是菲“主权”决定](/articles/voa/1016290.md)
-
-4-18 [争夺区域影响力 中澳高官相继访问巴布亚新几内亚](/articles/voa/1016291.md)
 
