--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-1 [中国宣布新航母“福建舰”出海启动航行试验](/articles/voa/1015989.md)
+
 5-1 [美国务院主管亚太事务高官：美国应维持对台政策框架，建设台湾威慑能力](/articles/voa/1015990.md)
 
 5-1 [CECC：《防止强迫维吾尔人劳动法》实施两年多，西方企业继续在新疆参与侵犯人权](/articles/voa/1015991.md)
@@ -598,6 +600,4 @@
 4-19 [肯尼亚总统：肯军队首领因直升机坠毁遇难](/articles/voa/1016287.md)
 
 4-19 [欧盟最高外交官呼吁七国集团加快向乌克兰提供防空武器并扩大对伊朗制裁](/articles/voa/1016288.md)
-
-4-19 [荷兰军事情报机构称，中国间谍把荷兰工业作为猎捕目标](/articles/voa/1016289.md)
 
