--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-1 [美众议院议长敦促校方采取行动后，警方驱逐并拘捕占据哥大教学楼的示威者](/articles/voa/1015988.md)
+
 5-1 [中国宣布新航母“福建舰”出海启动航行试验](/articles/voa/1015989.md)
 
 5-1 [美国务院主管亚太事务高官：美国应维持对台政策框架，建设台湾威慑能力](/articles/voa/1015990.md)
@@ -598,6 +600,4 @@
 4-19 [布林肯预计即将访问中国，美国务院尚未宣布具体日期](/articles/voa/1016286.md)
 
 4-19 [肯尼亚总统：肯军队首领因直升机坠毁遇难](/articles/voa/1016287.md)
-
-4-19 [欧盟最高外交官呼吁七国集团加快向乌克兰提供防空武器并扩大对伊朗制裁](/articles/voa/1016288.md)
 
