--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-1 [广东高速路塌陷致24人死](/articles/dw/1025715.md)
+
 5-1 [民调：多数美国人视TikTok为中国宣传工具](/articles/dw/1025716.md)
 
 5-1 [西方七国就2035年前退出煤电达成共识](/articles/dw/1025717.md)
@@ -598,6 +600,4 @@
 4-5 [联合国人权理事会呼吁对以色列禁运武器](/articles/dw/1026013.md)
 
 4-5 [何立峰会见耶伦 他们谈了些什么？](/articles/dw/1026014.md)
-
-4-5 [德国总理即将访华 众多德企高管随行](/articles/dw/1026015.md)
 
