--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-1 [中国商业环境今非昔比，英国壳牌能源退出中国电力市场](/articles/voa/1015976.md)
+
+5-1 [苹果公司业绩大幅下滑，外界关注苹果新款手机添置AI功能](/articles/voa/1015977.md)
+
 5-1 [分析：米莱改革初显成效，阿根廷与中国交往时的战略地位得到改善](/articles/voa/1015978.md)
 
 5-1 [在英港人讨论对华政策 鼓励港人参政](/articles/voa/1015979.md)
@@ -596,8 +600,4 @@
 4-19 [欠中国的债务即将到期，令吉尔吉斯斯坦民众不安](/articles/voa/1016274.md)
 
 4-19 [英国官员：将加强对英高等院校与中国研究合作的监督](/articles/voa/1016275.md)
-
-4-19 [联调局长抨击中国把关键基础设施当作网络行动的“可猎取目标”](/articles/voa/1016276.md)
-
-4-19 [七国集团重申支持乌克兰的国防和财政需求](/articles/voa/1016277.md)
 
