--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-2 [皮尤报告：多数美国人依然对中国持负面看法](/articles/voa/1015973.md)
+
 5-2 [美国国务卿布林肯：哈马斯不得拖延接受停火协议](/articles/voa/1015974.md)
 
 5-2 [所罗门群岛新总理选举周四见分晓，美澳中睁大眼睛关注](/articles/voa/1015975.md)
@@ -598,6 +600,4 @@
 4-19 [以色列袭击伊朗后，多家国际航班匆忙改道以避开伊朗领空](/articles/voa/1016271.md)
 
 4-19 [微软与阿联酋G42达成AI协议 美外交斡旋逼走了北京的中东势力？](/articles/voa/1016272.md)
-
-4-19 [以色列对伊朗发动报复性打击](/articles/voa/1016273.md)
 
