--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-2 [美国各地大学校园因加沙战争而发生更多动荡](/articles/voa/1015970.md)
+
 5-2 [美国针对俄罗斯发布数百项制裁，目标包括多家中国公司](/articles/voa/1015971.md)
 
 5-2 [批评人士质疑西藏流亡政府所说的与北京秘密渠道对话是否有效](/articles/voa/1015972.md)
@@ -598,6 +600,4 @@
 4-19 [以色列和伊朗的“爱恨情仇”](/articles/voa/1016268.md)
 
 4-19 [以色列据报袭击伊朗后，各方的反应 （更新中）](/articles/voa/1016269.md)
-
-4-19 [最新研究指出中国近一半的主要城市正在下沉](/articles/voa/1016270.md)
 
