--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-2 [共和党议员将访台参加总统就职，美国务院官员：密切关注中国行动](/articles/voa/1015966.md)
+
 5-2 [美国反兴奋剂机构批评世界反兴奋剂机构在中国游泳运动员药检问题上“变本加厉”地回避全部真相](/articles/voa/1015967.md)
 
 5-2 [布林肯会见内塔尼亚胡，再次推动加沙停火](/articles/voa/1015968.md)
@@ -598,6 +600,4 @@
 4-19 [以色列以战止战，中国会调停伊朗就此休兵?](/articles/voa/1016264.md)
 
 4-19 [台湾抗议北京启用新航路影响金马飞安，呼吁双方尽速就此展开协商](/articles/voa/1016265.md)
-
-4-19 [泽连斯基视察东部前线，乌军首次击落一架俄罗斯战略轰炸机](/articles/voa/1016266.md)
 
