--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-2 [成长合作社｜在大学，比上课更重要的事情](/articles/cdt/341117.md)
+
 5-1 [唐师三百手｜“劳动”距离成为历史名词还有多久](/articles/cdt/341119.md)
 
 5-1 [猛犸工作室｜当大龄司机卷进网约车](/articles/cdt/341122.md)
@@ -598,6 +600,4 @@
 3-31 [【CDT报告汇】中国当局干涉清史编纂，不承认清朝是外来“征服王朝”（外二篇）](/articles/cdt/342241.md)
 
 3-30 [贾话假说｜也许我们可以欣赏网飞《三体》](/articles/cdt/342247.md)
-
-3-30 [四环青年｜严防村民烧秸秆，仅看守干部餐食费就花了10多万](/articles/cdt/342249.md)
 
