--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,9 +3,11 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-12 [玖奌杂货铺｜数学家丘成桐也被骂成了汉奸公知](/articles/cdt/340800.md)
+
 5-11 [旧闻评论｜假如广州水费涨价发生在2009年……](/articles/cdt/340804.md)
 
-5-11 [LoveMattersPRO｜情况比预想的严峻，小红书删除”独立女性”和”女权主义”标签](/articles/cdt/340806.md)
+5-11 [LoveMattersPRO｜情况比预想的严峻，小红书删除“独立女性”和“女权主义”标签](/articles/cdt/340806.md)
 
 5-11 [维舟｜“学生这点自由都没有了？”](/articles/cdt/340808.md)
 
@@ -598,6 +600,4 @@
 4-8 [正面连接｜我从未告诉你我来自车辆厂](/articles/cdt/341971.md)
 
 4-8 [【404文库】“互联网是有记忆的，可我的稿子却消失了”（外二篇）](/articles/cdt/341976.md)
-
-4-8 [【CDT周报】第164期：一家三代农发行人的传承与守望](/articles/cdt/341978.md)
 
