--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 5-12 [每日一语 2024.5.11](/articles/cdt/340791.md)
 
+5-12 [青年志Youthology｜当一位女性决定反击性骚扰](/articles/cdt/340793.md)
+
 5-12 [歪脑｜守望自由张展：解封的城和被囚的人](/articles/cdt/340795.md)
 
 5-12 [逸洲｜一个新传毕业生的割裂人生](/articles/cdt/340796.md)
@@ -598,6 +600,4 @@
 4-8 [衣者褚｜清明回乡有感：耕地下遍布暗堡的未来](/articles/cdt/341960.md)
 
 4-8 [维舟的方舟｜东亚女性为何不想生孩子](/articles/cdt/341962.md)
-
-4-8 [建设性意见｜“基本常识”公众号将长期停更](/articles/cdt/341965.md)
 
