--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-12 [中国校级军官下周组团访日，重启日中军事交流](/articles/voa/1015710.md)
+
 5-12 [欧洲歌唱大赛因以巴冲突添政治色彩，以色列歌手在抗议声中拿下第五名](/articles/voa/1015711.md)
 
 5-12 [中国再开放8城市民赴港“个人游”，盼提振香港旅游业](/articles/voa/1015712.md)
@@ -598,6 +600,4 @@
 4-30 [中共七月召开二十届三中全会，称要深化改革以应对经济挑战](/articles/voa/1016008.md)
 
 4-30 [中国数字人才培育 学者指问题多多](/articles/voa/1016009.md)
-
-4-30 [白宫：严肃对待印度情报人员直接参与在美加两起暗杀行动的报道](/articles/voa/1016010.md)
 
