--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-12 [王毅赞第一夫人访欧“魅力外交”， 彭丽媛跃权力核心传闻再起](/articles/voa/1015706.md)
+
 5-12 [中国可能通过从应用程序取得的数据加强海外宣传](/articles/voa/1015707.md)
 
 5-12 [悬缺一年半后 中国驻印度大使徐飞洪履新](/articles/voa/1015708.md)
@@ -598,6 +600,4 @@
 5-1 [重振经济压力下，半数中国城市空气质量不达标](/articles/voa/1016004.md)
 
 5-1 [中国顶级病毒学家因公布新冠病毒基因组序列而麻烦缠身，如今露宿室外进行抗议](/articles/voa/1016005.md)
-
-4-30 [马斯克取消访印后突访北京令印度感到“震惊”和被“轻慢”](/articles/voa/1016006.md)
 
