--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-12 [恐违反国际法 以色列遭美国批评](/articles/dw/1025588.md)
+
 5-12 [印尼候任总统：和西方做朋友不意味不能与中、印、俄交善](/articles/dw/1025589.md)
 
 5-12 [缺少专业技术劳动力 德国企业损失数百亿](/articles/dw/1025590.md)
@@ -598,6 +600,4 @@
 4-16 [以牙还牙？以色列可能对伊朗做出的三种响应](/articles/dw/1025886.md)
 
 4-16 [會晤肖爾茨 習近平籲「警惕保護主義抬頭」](/articles/dw/1025887.md)
-
-4-16 [報告：中國異議人士家屬仍面臨「連坐罰」](/articles/dw/1025888.md)
 
