--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-13 [美国接近与沙特达成安全协议的决策点](/articles/voa/1015700.md)
+
 5-13 [中国新大使赴印度履新 专家：对改善中印关系影响不大](/articles/voa/1015701.md)
 
 5-13 [以军向拉法市纵深推进并在加沙北部与重组的哈马斯武装分子激战](/articles/voa/1015702.md)
@@ -598,6 +600,4 @@
 5-1 [乌克兰希望借助ATACMS摧毁普京在克里米亚的堡垒](/articles/voa/1015998.md)
 
 5-1 [拜登政府采取步骤，将减轻使用大麻的犯罪程度](/articles/voa/1015999.md)
-
-5-1 [布林肯表示，哈马斯接受停火协议“现在是采取行动的时候了”](/articles/voa/1016000.md)
 
