--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+5-13 [iPhone为何中国制造？](/articles/nyt/1042779.md)
+
+5-13 [从中国到世界，在痛苦与绝望中追寻希望](/articles/nyt/1042780.md)
+
 5-13 [习近平结束访欧：收获友情，但恐难彻底打消欧洲对华疑虑](/articles/nyt/1042781.md)
 
 5-10 [中国富豪承认提供非法政治捐款，将放弃绿卡离开美国](/articles/nyt/1042782.md)
@@ -596,8 +600,4 @@
 1-31 [中国房地产危机“尚未触底”](/articles/nyt/1043077.md)
 
 1-30 [红海危机背后，北京一场冷漠自私的游戏](/articles/nyt/1043078.md)
-
-1-30 [“美国正受到攻击”：反DEI运动在反对些什么](/articles/nyt/1043079.md)
-
-1-30 [耗尽积蓄、无薪实习：中国年轻人找工作有多难](/articles/nyt/1043080.md)
 
